update form isi

--- a/admin/index.html
+++ b/admin/index.html
@@ -39,11 +39,11 @@
                         <input type="hidden" name="_token" value="i2ZgD6hiwnTjR4Fav5G8ovzvLTFSno4mcx57GoAM" autocomplete="off">
                         <div class="mb-3">
                             <label class="form-label">Guest Name</label>
-                            <input type="text" class="form-control" name="name">
+                            <input type="text" class="form-control" name="name" disabled>
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Valid For</label>
-                            <input type="number" class="form-control" name="valid_for">
+                            <input type="number" class="form-control" name="valid_for" disabled>
                         </div>
                         <button type="submit" class="btn btn-secondary" disabled>Add Guest</button>
                     </form>
