update text column to disabled

--- a/admin/index.html
+++ b/admin/index.html
@@ -35,7 +35,7 @@
             <div class="card border-0 shadow mb-4">
                 <div class="card-body">
                     <h4 class="mb-3">Add New Guest</h4>
-                    <form action="https://feliciona17birthdayparty.vinchenamigo.com/admin/guests" method="POST">
+                    <form action="#" method="POST">
                         <input type="hidden" name="_token" value="i2ZgD6hiwnTjR4Fav5G8ovzvLTFSno4mcx57GoAM" autocomplete="off">
                         <div class="mb-3">
                             <label class="form-label">Guest Name</label>
