--- a/index.html
+++ b/index.html
@@ -122,15 +122,15 @@
             <div class="px-2">
                 <img src="img/wish_1.webp" alt="invitation" class="img-fluid px-5">
             </div>
-        <form action="https://feliciona17birthdayparty.vinchenamigo.com" method="post" class="wish-form">
+        <form action="#" method="post" class="wish-form">
             <input type="hidden" name="_token" value="i2ZgD6hiwnTjR4Fav5G8ovzvLTFSno4mcx57GoAM" autocomplete="off">          
             <label for="sender" class="text-start">Nama:</label>
-            <input type="text" name="sender" id="sender" class="shdow" required>
+            <input type="text" name="sender" id="sender" class="shdow" disabled>
             
             <label for="wish" class="text-start">Wish:</label>
-            <textarea name="wish" id="wish" rows="2" class="shadow" required></textarea>
+            <textarea name="wish" id="wish" rows="2" class="shadow" disabled></textarea>
     
-            <button type="submit" class="shadow">Submit</button>
+            <button type="submit" class="shadow" disabled>Submit</button>
         </form>
         <div class="px-4">
             <div class="wish-list px-4">
