--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top px-3">
         <a class="navbar-brand" href="#">
-            <img src="img/inv_title.webp" alt="Nicole Logo" width="100" height="45">
+            <img src="img/inv_title.webp" alt="Feliciona Logo" width="100" height="45">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
