fix gallery carousel

--- a/index.html
+++ b/index.html
@@ -437,19 +437,19 @@ and langgeng trus yaa~🥳
             <div class="carousel slide" id="carouselExample">
                 <div class="carousel-inner">
                   <div class="carousel-item active" id="act1">
-                    <img src="img/pic_1.webp" class="d-block w-100" alt="...">
+                    <img src="img/caro1.webp" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item" id="act2">
-                    <img src="img/pic_2.webp" class="d-block w-100" alt="...">
+                    <img src="img/caro2.webp" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item" id="act3">
-                    <img src="img/pic_3.webp" class="d-block w-100" alt="...">
+                    <img src="img/3.webp" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item" id="act4">
-                    <img src="img/pic_4.webp" class="d-block w-100" alt="...">
+                    <img src="img/caro4.webp" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item" id="act5">
-                    <img src="img/pic_5.webp" class="d-block w-100" alt="...">
+                    <img src="img/caro5.webp" class="d-block w-100" alt="...">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
