fix gallery carousel

--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@ and langgeng trus yaa~🥳
                     <img src="img/caro2.webp" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item" id="act3">
-                    <img src="img/3.webp" class="d-block w-100" alt="...">
+                    <img src="img/caro3.webp" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item" id="act4">
                     <img src="img/caro4.webp" class="d-block w-100" alt="...">
